<resources>
    <string name="app_name">Multiversus Rosters</string>
    <string name="rosters_name">Roster Name</string>
    <string name="description">Roster Description</string>
    <string name="judul_app">Multiversus Rosters</string>
    <string name="halamanprofil">halamanprofil</string>
    <string name="aryastarkdescription">Born the third child of Eddard and Catelyn Stark, Arya never wanted to be a lady or waste time with formality.
        She thought that was a boring task better left to her siblings. But when her father was murdered and her family deposed, young Arya found
        herself on a new journey that would take her across Westeros, and eventually to Essos where she trained to be a Faceless Man that transformed
        her into an accomplished swordswoman and deadly assassin. It was a transformation that would change the course of her life - and all of Westeros
        - forever.</string>
    <string name="batmandescription">The Caped Crusader and defender of Gotham City known only as Batman was born the night that a young Bruce Wayne saw his parents gunned down in front of him. Since that day, he has pledged to battle crime and protect the people of Gotham City. Despite having no superpowers or extraordinary abilities, his dedication, willpower, and intelligence have helped him stand shoulder-to-shoulder with the universe’s greatest heroes. His arsenal of cutting-edge gadgets funded by his family fortune doesn’t hurt, either.</string>
    <string name="bugsbunnydescription">One of pop culture’s most enduring icons, Bugs is a movie star, action hero, and sports legend with a career spanning over half a century. With plenty of Multiverse experience under his belt and a long history of team-ups, Bugs is arguably one of the least-fazed fighters in the face of this multiversal mayhem. He’s humble about it, but this smart aleck rabbit has been yukking it up on screens small and large since before most of these other fighters could walk. Armed with his wits and a few ACME-brand accessories, he’s ready to let loose the looniness.</string>
    <string name="finndescription">(Mostly) the last human from the Land of Ooo, Finn is a young warrior who has spent most of his life doing quests and helping the forces of good in their never-ending battle against anything and everything evil. With his sword, limitless imagination, and best friend/adopted brother Jake the Dog, there’s no villain he can’t defeat. When he’s not slaying evil, he loves just chilling and playing some video games with BMO.</string>
    <string name="garnetdescription">Garnet is the leader of the Crystal Gems - A group of extraterrestrial rebels hiding out on Earth. Along with the other Gems (and Steven), Garnet has sworn to protect the Earth from any invaders. She is actually the fusion of two Gems - Ruby and Sapphire - and might just be the most stable Fusion in existence. She may seem cold and stoic, but Garnet has a huge heart and will do anything to protect those in her care.</string>
    <string name="harleyquinndescription">Harleen Quinzel was a psychiatrist at Arkham Asylum until the fateful day she met the psychotic villain The Joker and everything changed forever. After years of being The Joker’s sidekick and main squeeze as Harley Quinn, she finally found the courage to leave and forge her own destiny. Her rise to power hasn’t escaped Batman’s notice, and he’s noted that she has the potential to become one of Gotham City’s, or even the world’s, greatest villains.</string>
    <string name="jakedescription">As far as Jake knew, he just happened to be born with his magical Stretchy Powers. He would find out far later that he was actually the offspring of a shapeshifter named Warren Ampersand. But no matter where he came from, Jake has created a happy life for himself as a hero and adventurer with his best bud, Finn the Human. When he’s not adventuring and punching major bad guy buns Jake likes to hang with his beloved wife Lady Rainicorn and their five Dog/Rainicorn/Shapeshifter pups.</string>
    <string name="reindogdescription">The world of Zanifeer was one of the first to fall victim to the Nothing during the great dimensional cataclysm. As far as most people knew, there were no survivors… except one. Reindog is a Royal Guardian - A long-lived protector of the Zanifeer royal family assigned to keep them safe. Although he looks fluffy and sweet, the heart of a warrior beats in his chest and he will do whatever it takes to protect those he loves. With the amazing powers from his gem he hopes that he can even find a way to bring back his beloved family.</string>
    <string name="shaggydescription">The last thing Shaggy remembers before The Change was exploring another spooky old mansion with his pal Scoob, just like any other day with the gang. He found a strange glowing crystal and, thinking it was rock candy, went to take a bite. There was a FLASH… and then blackness. When he came to, he found himself in possession of incredible powers. He doesn’t know where they came from or how they work, but he’s vowed to use them to vanquish evil and protect the little guy. As soon as he gets some lunch, that is.</string>
    <string name="stevendescription">The only known hybrid of a human and a Gem, Steven was always destined to be special. He spent most of his childhood raised by a trio of Gems hiding out on Earth, but it wasn’t until he became a teenager that he started to grow into his own potential as a hero. With his big heart, unstoppable optimism, and incredible Gem powers; Steven will always save the day!</string>
    <string name="supermandescription">Disaster struck Kal-El’s home world of Krypton when he was just a baby, leaving his parents with no choice but to send him to the stars. His rocket crash-landed on Earth where he was found by Martha and Jonathan Kent and raised as their child. As he grew older, the light of Earth’s yellow sun activated his incredible Kryptonian powers, which he vowed to use to protect humanity and stand up for truth and justice. As one of the founding members of the Justice League he has been an inspiration for countless generations of heroes as he continues to fight evil in all its forms.</string>
    <string name="tazdescription">Like the offspring of a tornado and a particularly angry electric razor, the Tasmanian Devil is a spitting, surly ball of manic energy. If you can get him to calm down, they say he’s as sweet and gentle as a kitten, but that’s a pretty big “if.” Taz has a temper that’s outmatched only by his appetite and, trust us, you don’t want to see this Devil when he’s hangry.</string>
    <string name="tomjerrydescription">Ever since they first laid eyes on each other, Tom and Jerry have had a complicated relationship. As a housecat and a mouse they should be mortal enemies, but the two have nonetheless teamed up many times over the years. Like many “toons,” Tom and Jerry fight with a zany, madcap style and display nearly indestructible levels of durability. They’ll be great champions to have in the battle against the Nothing so long as they can stop fighting each other long enough to do it.</string>
    <string name="velmadescription">Velma has been solving mysteries since most people were still in diapers. With her insatiable appetite for answers and expert nose for knowledge, she’s the perfect mystery-solving machine. These days, she’s the undisputed super sleuth of Mystery, Inc., traveling with her friends to uncover criminals and bust hoaxes wherever she goes. She can sometimes get in over her head when she forgets to take her nose out of her books, but don’t underestimate her - Velma Dinkley can still kick some serious butt when she needs to.</string>
    <string name="wonderwomandescription">One of reality’s mightiest heroes, “Wonder Woman” is a name both feared and loved across the Multiverse. A fierce warrior, proud commander, and kind leader, Diana was sent to the World of Man by the Amazons to act as a champion of peace. She’s defeated countless villains both by herself and as a founding member of the Justice League, and she has served as an inspiration for a whole new generation of heroes.</string>
    <string name="nama">Akmalinnuha</string>
    <string name="email">dragonsalamance@gmail.com</string>
    <string name="desc">DESCRIPTION:</string>
    <string name="lds">naninani</string>
    <string name="info1">INFORMATION 1</string>
    <string name="info2">INFORMATION 2</string>
    <string name="info3">INFORMATION 3</string>
    <string name="blank"> </string>
</resources>