<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#141629"
    tools:context=".ReindogActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/reindogdesc"
                android:contentDescription="foto roster"/>

        </FrameLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/reindog1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textFontWeight="500"
                    android:textStyle="italic"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/info1"/>

                <TextView
                    android:id="@+id/reindog2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textFontWeight="500"
                    android:fontFamily="sans-serif-condensed"
                    android:textStyle="italic"
                    android:paddingHorizontal="55dp"
                    android:text="@string/info2"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/reindog3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textFontWeight="500"
                    android:fontFamily="sans-serif-condensed"
                    android:textStyle="italic"
                    android:textColor="@color/white"
                    android:text="@string/info3"/>
                <TextView
                    android:id="@+id/reindog4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textFontWeight="500"
                    android:paddingHorizontal="55dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textStyle="italic"
                    android:textColor="@color/white"
                    android:text="@string/info3"/>
            </TableRow>
        </TableLayout>
        <TextView
            android:id="@+id/reindog5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:textFontWeight="500"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="italic"
            android:textColor="#01e8ea"
            android:text="@string/desc"/>
        <TextView
            android:id="@+id/reindog6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="14dp"
            android:textFontWeight="500"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="italic"
            android:justificationMode="inter_word"
            android:textColor="@color/white"
            android:text="@string/jakedescription" />
        <ToggleButton
            android:id="@+id/toggle9"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textOn=""
            android:textOff=""
            android:background="@drawable/toggle_selector"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blank" />
    </LinearLayout>
</ScrollView>